# infinite-platformer

./: .gitignore  .zshrc.swp  Animation.cpp  Animation.h  Button.cpp  Button.hpp  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Collision.cpp  Collision.hpp  DartConfiguration.tcl  Entity.cpp  Entity.h  Entity.hpp  EntityTest.hpp  Game.cpp  Game.h  Generation.cpp  Generation.h  Generation.hpp  Genration.cpp  LavaPit.cpp  LavaPit.h  LavaPit.hpp  Makefile  Menu.cpp  Menu.h  Menu.hpp  Object.cpp  Object.h  Object.hpp  Obstacle.cpp  Obstacle.h  Obstacle.hpp  Platform.cpp  Platform.hpp  Player.cpp  Player.h  Player.hpp  (+33 more)
catch2/: conanbuild.sh  conanbuildenv-release-x86_64.sh  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh
inc/: Button.hpp  Game.hpp  Generation.hpp  LavaPit.hpp  Menu.hpp  Obstacle.hpp  Platform.hpp  Player.hpp  Spikes.hpp
include/: Animation.hpp  Button.hpp  Colision.hpp  Entity.hpp  Game.hpp  Gamestate.hpp  Generation.hpp  LavaPit.hpp  LavaWall.hpp  Menu.hpp  Object.hpp  Obstacle.hpp  Physics.hpp  Platform.hpp  Player.hpp  Rock.hpp  RockPlatform.hpp  Spikes.hpp
main/: main-1-1.cpp  main-1-2.cpp
src/: Animation.cpp  Button.cpp  Colision.cpp  Entity.cpp  Game.cpp  Gamestate.cpp  Generation.cpp  LavaPit.cpp  LavaWall.cpp  Menu.cpp  Object.cpp  Obstacle.cpp  Physics.cpp  Platform.cpp  Player.cpp  Rock.cpp  RockPlatform.cpp  Spikes.cpp  main.cpp
tests/: test_Button.cpp  test_Collision.cpp  test_Entity.cpp  test_Generation.cpp  test_LavaPit.cpp  test_LavaWall.cpp  test_Menu.cpp  test_Platform.cpp  test_Player.cpp  test_Rock.cpp  test_Spikes.cpp  test_all.cpp  test_generation.cpp
